# fable-6-router

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/fable_router/: __init__.py  bench.py  bench_aime.py  bench_chart.py  bench_evalplus.py  cache.py  classifier.py  doctor.py  ensemble.py  fable6.py  ledger.py  mcts.py  router.py  server_api.py  server_mcp.py  smoke.py
src/fable_router/adapters/: base.py  claude_cli.py  codex_cli.py  copilot.py  dashscope.py  opencode_cli.py  vertex.py
