[project]
name = "fable-6-router"
version = "0.1.0"
description = "Multi-model orchestrator: router + MoA ensemble + AB-MCTS over your existing model subscriptions (Vertex ADC, OpenCode Go, Codex/ChatGPT)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "fastmcp>=3.4.2",
    "google-genai>=2.10.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "treequest>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fable_router"]
